[gd_scene load_steps=14 format=2]

[ext_resource path="res://BattleFields/BaseBattleField.tscn" type="PackedScene" id=1]
[ext_resource path="res://BattleFields/EnemyBattleFields/SpinesBattleField.gd" type="Script" id=2]
[ext_resource path="res://Images/Player.png" type="Texture" id=3]
[ext_resource path="res://BattleFields/EnemyBattleFields/Utils/Spike.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/ShieldEffect.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.91491, 4.91881 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Shield",
"speed": 12.0
} ]

[node name="SpinesBattleField" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Player" type="Area2D" parent="Field" index="0"]
position = Vector2( 36, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field/Player" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Field/Player" index="1"]
texture = ExtResource( 3 )

[node name="ShieldAnimation" type="AnimatedSprite" parent="Field/Player" index="2"]
visible = false
frames = SubResource( 11 )
animation = "Shield"
frame = 1
playing = true

[node name="TSpike" parent="Field" index="1" instance=ExtResource( 4 )]
position = Vector2( 36, -1 )
rotation = 3.14159

[node name="TRSpike" parent="Field" index="2" instance=ExtResource( 4 )]
position = Vector2( 69, 1 )
rotation = 3.92699

[node name="RSpike" parent="Field" index="3" instance=ExtResource( 4 )]
position = Vector2( 71, 30 )
rotation = 4.71239

[node name="BRSpike" parent="Field" index="4" instance=ExtResource( 4 )]
position = Vector2( 70, 60 )
rotation = 5.49779

[node name="BSpike" parent="Field" index="5" instance=ExtResource( 4 )]
position = Vector2( 37, 67 )

[node name="BLSpike" parent="Field" index="6" instance=ExtResource( 4 )]
position = Vector2( 3, 59 )
rotation = 0.785398

[node name="LSpike" parent="Field" index="7" instance=ExtResource( 4 )]
position = Vector2( -1, 31 )
rotation = 1.5708

[node name="TLSpike" parent="Field" index="8" instance=ExtResource( 4 )]
position = Vector2( 2, 0 )
rotation = 2.35619

[node name="SpikeTimer" type="Timer" parent="Field" index="9"]

[node name="CooldownTimer" type="Timer" parent="Field" index="10"]
wait_time = 0.5

[node name="ShieldTimer" type="Timer" parent="Field" index="11"]
wait_time = 0.5

[node name="DoneTimer" type="Timer" parent="Field" index="12"]
wait_time = 1.5
one_shot = true
